Remame settings fields for clarity

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -29,22 +29,22 @@ gaston {
     wishes-start-row = 1
 
     # Column at which the persons start on the first line
-    persons-start-index = 4
+    persons-start-col = 4
 
     # Column for the topics
-    topic-index = 0
+    topic-col = 0
 
     # Index for the count of occurrences of a topic (if there are multiple sessions)
-    topic-occurrence-count-index = null
+    topic-occurrence-count-col = null
 
     # Column for the mandatory player on a topic
-    mandatory-person-index = 1
+    mandatory-person-col = 1
 
     # Column for the min number of persons on that topic, optional
-    min-persons-index = 2
+    min-persons-col = 2
 
     # Column for the max number of persons on that topic
-    max-persons-index = 3
+    max-persons-col = 3
 
     # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
     persons-count-add = 0
