--- a/src/test/resources/test-application.conf
+++ b/src/test/resources/test-application.conf
@@ -10,14 +10,14 @@ gaston: {
 
   table-settings: {
     separator: "\t"
-    persons-starting-index: 4
+    persons-starting-col: 4
     persons-row: 1
     other-header-rows-count: 0
-    topic-index: 0
-    min-persons-index: null
-    max-persons-index: 2
+    topic-col: 0
+    min-persons-col: null
+    max-persons-col: 2
     persons-count-add: 1
-    mandatory-person-index: 1
+    mandatory-person-col: 1
     mandatory-person-reward-weight: 1.5
     forbidden-person-marker: 0
     preferences-score-mapping: {
