--- a/src/test/resources/udocon-2017-completed.conf
+++ b/src/test/resources/udocon-2017-completed.conf
@@ -11,12 +11,12 @@
     "separator": "\t",
     "persons-row": 0,
     "other-header-rows-count": 0,
-    "topic-index": 0,
-    "mandatory-person-index": 1,
+    "topic-col": 0,
+    "mandatory-person-col": 1,
     "mandatory-person-reward-weight": 1.5,
-    "persons-starting-index": 4,
-    "min-persons-index": null,
-    "max-persons-index": 2,
+    "persons-starting-col": 4,
+    "min-persons-col": null,
+    "max-persons-col": 2,
     "persons-count-add": 1,
     "forbidden-person-marker": "0",
     "preferences-score-mapping": {
