--- a/src/test/resources/r3-table.conf
+++ b/src/test/resources/r3-table.conf
@@ -21,27 +21,27 @@ gaston {
     other-header-rows-count = 0
 
     # Column for the topics
-    topic-index = 0
+    topic-col = 0
 
     # Column for the mandatory player on a topic
-    mandatory-person-index = 1
+    mandatory-person-col = 1
 
     # Column for the min number of persons on that topic, optional
-    min-persons-index = 2
+    min-persons-col = 2
 
     # Column for the max number of persons on that topic
-    max-persons-index = 3
+    max-persons-col = 3
 
     # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
     persons-count-add = 0
 
     # Column at which the persons start on the first line
-    persons-starting-index = 6
+    persons-starting-col = 6
 
     # Weight given to any gamemaster
     mandatory-person-reward-weight = 1.2
 
-    topic-occurence-count-index = 4
+    topic-occurence-count-col = 4
 
     # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
     forbidden-person-marker = 0
