--- a/src/test/resources/r3-table.conf
+++ b/src/test/resources/r3-table.conf
@@ -41,7 +41,7 @@ gaston {
     # Weight given to any gamemaster
     mandatory-person-reward-weight = 1.2
 
-    topic-occurence-count-col = 4
+    topic-occurrences-col = 4
 
     # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
     forbidden-person-marker = 0
