Cleans input loading

--- a/src/test/resources/udocon-2017-from-table.conf
+++ b/src/test/resources/udocon-2017-from-table.conf
@@ -9,11 +9,11 @@
   "table-settings": {
     "separator": "\t",
     "persons-row": 0,
-    "other-header-rows-count": 0,
+    "wishes-start-row": 1,
     "topic-col": 0,
     "mandatory-person-col": 1,
-    "mandatory-person-reward-weight": 1.5,
-    "persons-starting-col": 4,
+    "mandatory-person-weight": 1.5,
+    "persons-start-col": 4,
     "min-persons-col": null,
     "max-persons-col": 2,
     "persons-count-add": 1,
