Takes base input slots into account when importing a table

--- a/src/test/resources/udocon2017/uc17-from-table.conf
+++ b/src/test/resources/udocon2017/uc17-from-table.conf
@@ -25,8 +25,9 @@
   }
 
   "slots": [
-    [ { "name": "Day1-afternoon" }, { "name": "Day1-evening", "max-topics": 4 } ]
-    [ { "name": "Day2-afternoon" } ]
+    [ { "name": "D1-afternoon" }, { "name": "D1-evening", "max-topics": 5 } ]
+    [ { "name": "D2-afternoon" }, { "name": "D2-evening", "max-topics": 5 } ]
+    [ { "name": "D3-afternoon" } ]
   ]
 
   "topics": [
