Corrects samples for udocon 2019

--- a/src/test/resources/udocon2019/uc19-full.conf
+++ b/src/test/resources/udocon2019/uc19-full.conf
@@ -1,9 +1,173 @@
 gaston {
-  constraints {
-    exclusive = []
-    simultaneous = []
+  settings {
+    default-max-topics-per-slot = 6
+    default-max-persons-per-topic = 6
+    default-min-persons-per-topic = 4
   }
+
+  slots = [
+    [
+      {
+        name = D1-afternoon
+      },
+      {
+        name = D1-evening
+      }
+    ],
+    [
+      {
+        name = D2-afternoon
+      },
+      {
+        name = D2-evening
+      }
+    ],
+    [
+      {
+        name = D3-afternoon
+      }
+    ]
+  ]
+
+  topics = [
+    {
+      name = "Agôn : Miasmes"
+    },
+    {
+      name = "Big Gay Orcs"
+    },
+    {
+      max = 5
+      name = "Couleur Béton"
+    },
+    {
+      name = "Donjon & Cie"
+    },
+    {
+      min = 12
+      max = 12
+      name = "Double table Selpoivre / Tolkraft"
+      // multiple=2
+    },
+    {
+      max = 12
+      min = 10
+      name = "Double table Shadowrun Anarchy"
+      // multiple=2
+    },
+    {
+      name = "End of Line"
+    },
+    {
+      name = "Etoiles en Guerre"
+    },
+    {
+      name = Facettes
+    },
+    {
+      max = 5
+      name = "Inflorenza Millevolodine"
+    },
+    {
+      name = "Itras By By Night"
+    },
+    {
+      name = "Ixalan - X Marks the Spot"
+    },
+    {
+      name = "Legacy: Le Vaisseau Mère"
+    },
+    {
+      name = "Les Rivières de Paris"
+    },
+    {
+      name = "Les Schtroumpfs !"
+    },
+    {
+      name = "Meurtre au Monastère Quantique"
+    },
+    {
+      name = Meute
+    },
+    {
+      name = "Monster of the Week"
+    },
+    {
+      name = "Over the Edge"
+    },
+    {
+      name = "Painappuru Sentai Dekaranger !"
+    },
+    {
+      name = "Pirate & Zombi"
+    },
+    {
+      min = 3
+      name = "Ribbon Drive"
+    },
+    {
+      name = Soth
+    },
+    {
+      max = 5
+      name = "Star Wars: Wraith Squadron"
+    },
+    {
+      name = "The Sprawl : Los Angeles"
+    },
+    {
+      name = "Things from the Flood"
+    },
+    {
+      name = "Trois étés à Bonneville"
+    },
+    {
+      name = "Une Epoque qui Rôtit l'Âme des Hommes (ITO)"
+    },
+    {
+      max = 5
+      min = 5
+      name = "Vampire the Masquerade v5"
+    },
+    {
+      name = Vastemonde
+    }
+  ]
+
   persons = [
+    {
+      absences = []
+      forbidden = [Soth]
+      incompatible = []
+      mandatory = [
+        "Vampire the Masquerade v5"
+        "Double table Selpoivre / Tolkraft"
+      ]
+      name = Selpoivre
+      weight = 1.0
+      wishes {
+        "Big Gay Orcs" = 1.0
+        "Couleur Béton" = 1.0
+        "Donjon & Cie" = 1.0
+        "Double table Shadowrun Anarchy" = 1.0
+        "End of Line" = 1.0
+        Facettes = 1.0
+        "Inflorenza Millevolodine" = 1.0
+        "Les Rivières de Paris" = 1.0
+        "Les Schtroumpfs !" = 1.0
+        "Meurtre au Monastère Quantique" = 1.0
+        "Monster of the Week" = 1.0
+        "Over the Edge" = 5.0
+        "Painappuru Sentai Dekaranger !" = 5.0
+        "Pirate & Zombi" = 1.0
+        "Ribbon Drive" = 1.0
+        "Star Wars: Wraith Squadron" = 1.0
+        "The Sprawl : Los Angeles" = 1.0
+        "Things from the Flood" = 5.0
+        "Trois étés à Bonneville" = 1.0
+        "Une Epoque qui Rôtit l'Âme des Hommes (ITO)" = 1.0
+      }
+    },
     {
       absences = []
       forbidden = []
@@ -593,39 +757,6 @@ gaston {
       forbidden = [Soth]
       incompatible = []
       mandatory = [
-        "Vampire the Masquerade v5"
-        "Double table Selpoivre / Tolkraft"
-      ]
-      name = Selpoivre
-      weight = 1.0
-      wishes {
-        "Big Gay Orcs" = 1.0
-        "Couleur Béton" = 1.0
-        "Donjon & Cie" = 1.0
-        "Double table Shadowrun Anarchy" = 1.0
-        "End of Line" = 1.0
-        Facettes = 1.0
-        "Inflorenza Millevolodine" = 1.0
-        "Les Rivières de Paris" = 1.0
-        "Les Schtroumpfs !" = 1.0
-        "Meurtre au Monastère Quantique" = 1.0
-        "Monster of the Week" = 1.0
-        "Over the Edge" = 5.0
-        "Painappuru Sentai Dekaranger !" = 5.0
-        "Pirate & Zombi" = 1.0
-        "Ribbon Drive" = 1.0
-        "Star Wars: Wraith Squadron" = 1.0
-        "The Sprawl : Los Angeles" = 1.0
-        "Things from the Flood" = 5.0
-        "Trois étés à Bonneville" = 1.0
-        "Une Epoque qui Rôtit l'Âme des Hommes (ITO)" = 1.0
-      }
-    },
-    {
-      absences = []
-      forbidden = [Soth]
-      incompatible = []
-      mandatory = [
         "Double table Selpoivre / Tolkraft"
       ]
       name = Tolkraft
@@ -739,155 +870,10 @@ gaston {
       }
     }
   ]
-  settings {
-    backtrack-initial-schedule = true
-    default-max-persons-per-topic = 6
-    default-max-topics-per-slot = 6
-    default-min-persons-per-topic = 4
-    incompatibility-anti-preference = -1000.0
-    max-persons-on-nothing = 0
-    min-persons-on-nothing = 0
-    person-on-nothing-anti-preference = -100.0
+
+  constraints {
+    exclusive = []
+    simultaneous = []
   }
-  slots = [
-    [
-      {
-        name = D1-afternoon
-      },
-      {
-        name = D1-evening
-      }
-    ],
-    [
-      {
-        name = D2-afternoon
-      },
-      {
-        name = D2-evening
-      }
-    ],
-    [
-      {
-        name = D3-afternoon
-      }
-    ]
-  ]
-  table-settings {
-    forbidden-person-marker = "0"
-    mandatory-person-col = 1
-    mandatory-person-weight = 1.0
-    max-persons-col = 2
-    persons-count-add = 1
-    persons-row = 0
-    persons-start-col = 4
-    preferences-score-mapping {
-      "1" = 1.0
-      "2" = 5.0
-    }
-    separator = "\t"
-    topic-col = 0
-    wishes-start-row = 1
-  }
-  topics = [
-    {
-      name = "Agôn : Miasmes"
-    },
-    {
-      name = "Big Gay Orcs"
-    },
-    {
-      max = 5
-      name = "Couleur Béton"
-    },
-    {
-      name = "Donjon & Cie"
-    },
-    {
-      min = 12
-      max = 12
-      name = "Double table Selpoivre / Tolkraft"
-    },
-    {
-      max = 12
-      min = 10
-      name = "Double table Shadowrun Anarchy"
-    },
-    {
-      name = "End of Line"
-    },
-    {
-      name = "Etoiles en Guerre"
-    },
-    {
-      name = Facettes
-    },
-    {
-      max = 5
-      name = "Inflorenza Millevolodine"
-    },
-    {
-      name = "Itras By By Night"
-    },
-    {
-      name = "Ixalan - X Marks the Spot"
-    },
-    {
-      name = "Legacy: Le Vaisseau Mère"
-    },
-    {
-      name = "Les Rivières de Paris"
-    },
-    {
-      name = "Les Schtroumpfs !"
-    },
-    {
-      name = "Meurtre au Monastère Quantique"
-    },
-    {
-      name = Meute
-    },
-    {
-      name = "Monster of the Week"
-    },
-    {
-      name = "Over the Edge"
-    },
-    {
-      name = "Painappuru Sentai Dekaranger !"
-    },
-    {
-      name = "Pirate & Zombi"
-    },
-    {
-      min = 3
-      name = "Ribbon Drive"
-    },
-    {
-      name = Soth
-    },
-    {
-      max = 5
-      name = "Star Wars: Wraith Squadron"
-    },
-    {
-      name = "The Sprawl : Los Angeles"
-    },
-    {
-      name = "Things from the Flood"
-    },
-    {
-      name = "Trois étés à Bonneville"
-    },
-    {
-      name = "Une Epoque qui Rôtit l'Âme des Hommes (ITO)"
-    },
-    {
-      max = 5
-      min = 5
-      name = "Vampire the Masquerade v5"
-    },
-    {
-      name = Vastemonde
-    }
-  ]
+
 }
