--- a/src/test/resources/udocon2019/uc19-full.conf
+++ b/src/test/resources/udocon2019/uc19-full.conf
@@ -44,16 +44,16 @@ gaston {
       name = "Donjon & Cie"
     },
     {
-      min = 12
-      max = 12
+      min = 6
+      max = 6
       name = "Double table Selpoivre / Tolkraft"
-      // multiple=2
+      multiple=2
     },
     {
-      max = 12
-      min = 10
+      max = 6
+      min = 5
       name = "Double table Shadowrun Anarchy"
-      // multiple=2
+      multiple=2
     },
     {
       name = "End of Line"
