Updates test for latest version

--- a/src/test/resources/r32019/r32019-table.conf
+++ b/src/test/resources/r32019/r32019-table.conf
@@ -5,66 +5,44 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    allow-no-topic-min = 0
-    allow-no-topic-max = 0
+    min-persons-on-nothing = 0
+    max-persons-on-nothing = 0
+    person-on-nothing-anti-preference = -100.0
   }
 
-  # Settings when reading the Udo-Table format
   table-settings {
-    # Separator in the file (should be inside quotation marks)
     separator = "\t"
-
-    # Lines where the person names appear.
     persons-row = 0
-
-    # Number of other lines (in addition to the persons' line) to ignore.
-    other-header-rows-count = 0
-
-    # Column for the topics
+    wishes-start-row = 1
     topic-col = 0
-
-    # Column for the mandatory player on a topic
     mandatory-person-col = 1
-
-    # Column for the min number of persons on that topic, optional
     min-persons-col = 2
-
-    # Column for the max number of persons on that topic
     max-persons-col = 3
-
-    # Number to add to the min and max number of persons read. Often 1 if the mandatory person isn't counted in the table.
     persons-count-add = 0
-
-    # Column at which the persons start on the first line
-    persons-starting-col = 6
-
-    # Weight given to any gamemaster
-    mandatory-person-reward-weight = 1.2
-
     topic-occurrences-col = 4
-
-    # Preferences with this value are considered to indicate that the relevent person is forbidden on that topic
+    persons-starting-col = 6
     forbidden-person-marker = 0
-
-    # For each text in a cell, the associated score. If no mapping is specified, the content of the cell will be used directly as the number.
-    preferences-score-mapping = null
   }
 
-
-  slots: [
-    { name = "1 - mercredi aprèm" },
-    { name = "2 - mercredi soir" },
-    { name = "3 - jeudi aprèm" },
-    { name = "4 - jeudi soir" },
-    { name = "5 - vendredi aprèm" },
-    { name = "6 - vendredi soir" },
-    { name = "7 - samedi aprèm" }
-    { name = "8 - samedi soir" }
+  slots = [
+    [
+      {name = "1 - mercredi aprèm"},
+      {name = "2 - mercredi soir"},
+    ][
+      {name = "3 - jeudi aprèm"},
+      {name = "4 - jeudi soir"},
+    ][
+      {name = "5 - vendredi aprèm"},
+      {name = "6 - vendredi soir"},
+    ][
+      {name = "7 - samedi aprèm"}
+      {name = "8 - samedi soir"}
+    ]
   ]
 
-  topics: []
+  topics = []
 
-  persons: []
+  persons = []
 
-  constraints: {}
+  constraints {}
 }
