Horrible stuff to make forced-topics work

--- a/src/test/resources/r32023/r32023.conf
+++ b/src/test/resources/r32023/r32023.conf
@@ -197,12 +197,14 @@ gaston {
       min = 4
       name = "Trip to Skye - début"
       slots = [ "3 - vendredi aprèm" ]
+      forced = true
     },
     {
       max = 5
       min = 4
       name = "Trip to Skye - fin"
       slots = [ "4 - vendredi soir" ]
+      forced = true
     },
     {
       max = 5
