Fix order of settings in config files

--- a/src/test/resources/r32019/r32019.conf
+++ b/src/test/resources/r32019/r32019.conf
@@ -1,12 +1,14 @@
 "gaston" = {
 
   settings = {
-    incompatibility-anti-preference = -1000
+    incompatibility-anti-preference = -1000.0
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    allow-no-topic-min = 4
-    allow-no-topic-max = 400
+    min-persons-on-nothing = 4
+    max-persons-on-nothing = 400
+    person-on-nothing-anti-preference = -100.0
+    backtrack-initial-schedule = false
   }
 
   slots = [
