--- a/src/test-perf/resources/r32024/full.conf
+++ b/src/test-perf/resources/r32024/full.conf
@@ -5,15 +5,12 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    min-persons-on-nothing = 1
-    max-persons-on-nothing = 100
-    person-on-nothing-anti-preference = -100.0
-    person-on-nothing-anti-preference-scaling {
+    person-unassigned-anti-preference = -200.0
+    person-unassigned-anti-preference-scaling {
       enabled = true
       forbidden-ratio-for-maximum = 0.75
-      maximum-anti-preference = -1.0
+      maximum-anti-preference = -50.0
     }
-    person-unassigned-anti-preference = -100.0
     backtrack-initial-schedule = false
   }
 
@@ -34,8 +31,9 @@ gaston {
     {
       max = 5
       min = 5
-      name = "Anime was a Mistake : No more isekai [Soir]"
-      slots = ["2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir"]
+      name = "Anime was a Mistake : No more isekai"
+      # slots = ["2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir"]
+      slots = []
     },
     {
       max = 7
@@ -51,6 +49,8 @@ gaston {
       max = 6
       min = 4
       name = "Big Gay Orcs + Stag Party + Rapid and Righteous 2"
+      # slots = []
+      forced = true
     },
     {
       max = 4
@@ -67,6 +67,7 @@ gaston {
       max = 5
       min = 4
       name = Brinkwood
+      slots = []
     },
     {
       max = 5
@@ -113,6 +114,7 @@ gaston {
       max = 4
       min = 2
       name = InflorItras
+      slots = []
     },
     {
       max = 5
@@ -185,6 +187,7 @@ gaston {
       max = 4
       min = 4
       name = "Ultraconfins V2"
+      slots = []
     },
     {
       max = 4
@@ -210,8 +213,10 @@ gaston {
       ]
       name = Adrien
       weight = 1.0
+      base-score = -50
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 1.0
+        "Bliss Stage" = 2.0 # Forcing a bit
+        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "Avatar Legends" = 0.5
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 4.0
@@ -241,7 +246,7 @@ gaston {
         "Libreté : Au lycée des corps brisés",
         "Donjons et Chatons",
         "Exploirateurs de bruines",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         Soth,
         "Avatar Legends",
@@ -295,7 +300,7 @@ gaston {
       name = Cactus
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 2.0
+        "Anime was a Mistake : No more isekai" = 2.0
         "Avatar Legends" = 1.0
         "Bliss Stage" = 2.0
         "Bluebeard’s Bride" = 1.0
@@ -358,7 +363,7 @@ gaston {
       name = Elmi
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 2.0
+        "Anime was a Mistake : No more isekai" = 2.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
         Brinkwood = 1.0
         "Chasse au vampire" = 1.0
@@ -431,6 +436,7 @@ gaston {
       name = Gawel
       weight = 1.0
       wishes {
+        "Soth" = 1.0
         "Bluebeard’s Bride" = 1.0
         "Chasse au vampire" = 1.0
         "Cyberpunk red" = 5.0
@@ -449,7 +455,7 @@ gaston {
         "Génèse",
         "London Girls",
         "La couvée - le trésor maudit",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         Brinkwood,
         Soth,
         Weird,
@@ -490,7 +496,7 @@ gaston {
         "Génèse",
         "Synthétiques : Les Voix",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Loin du Feu − \"Le Ventre de Lyon\"",
         Soth,
         "Fate of Cthulhu",
@@ -545,7 +551,7 @@ gaston {
       name = Maxime
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 1.0
+        "Anime was a Mistake : No more isekai" = 1.0
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 3.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
@@ -568,7 +574,7 @@ gaston {
         "Génèse",
         "La couvée - le trésor maudit",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         "Chasse au vampire",
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2"
@@ -611,7 +617,7 @@ gaston {
       name = Noémie
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 3.0
+        "Anime was a Mistake : No more isekai" = 3.0
         "Avatar Legends" = 3.0
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 2.0
         "Bluebeard’s Bride" = 3.0
@@ -637,7 +643,7 @@ gaston {
       forbidden = [
         "Génèse",
         Microscope,
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         Brinkwood,
         "Cyberpunk red",
@@ -663,6 +669,12 @@ gaston {
       name = Olivier
       weight = 1.0
       wishes {
+        Shades = -2
+        "London Girls" = -2
+        "Onirico Sov" = -2
+        Weird = -2
+        "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = -2
+        InflorItras = -2
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "Avatar Legends" = 1.0
         "Bliss Stage" = 5.0
@@ -712,7 +724,7 @@ gaston {
       name = Rafik
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 1.0
+        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Fate of Cthulhu" = 3.0
@@ -732,7 +744,7 @@ gaston {
         "Pasion de las Pasiones",
         "London Girls",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Bliss Stage",
         "Bluebeard’s Bride",
         "Avatar Legends",
@@ -787,7 +799,7 @@ gaston {
       ]
       mandatory = [
         "Donjons et Chatons",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         Brinkwood,
         "Bluebeard’s Bride",
         "The Wildsea"
@@ -868,7 +880,7 @@ gaston {
       name = Vincent
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 1.0
+        "Anime was a Mistake : No more isekai" = 1.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 1.0
@@ -886,7 +898,7 @@ gaston {
       forbidden = [
         "Génèse",
         "Synthétiques : Les Voix",
-        "Anime was a Mistake : No more isekai [Soir]",
+        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         "Bliss Stage",
         "Cyberpunk red",
@@ -932,7 +944,7 @@ gaston {
       name = Vivien
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai [Soir]" = 1.0
+        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 4.0
         "Avatar Legends" = 4.0
         "Bluebeard’s Bride" = 4.0
