Better test on input

--- a/src/test/resources/test-application.conf
+++ b/src/test/resources/test-application.conf
@@ -26,15 +26,15 @@ gaston: {
     }
   }
 
-  slots: [[
-    {
-      name: A,
-      max-topics: 4
-    },
-    {
-      name: B
-    }
-  ]]
+  slots: [
+    [
+      {name: A, max-topics: 4}
+      {name: B}
+    ],
+    [
+      {name: C}
+    ]
+  ]
 
   topics: [
     {
