--- a/src/test-perf/resources/r32024/full.conf
+++ b/src/test-perf/resources/r32024/full.conf
@@ -29,13 +29,6 @@ gaston {
 
   topics = [
     {
-      max = 5
-      min = 5
-      name = "Anime was a Mistake : No more isekai"
-      # slots = ["2 - jeudi soir", "4 - vendredi soir", "6 - samedi soir"]
-      slots = []
-    },
-    {
       max = 7
       min = 5
       name = "Apocalypse world - Le village aux corbeaux"
@@ -49,7 +42,6 @@ gaston {
       max = 6
       min = 4
       name = "Big Gay Orcs + Stag Party + Rapid and Righteous 2"
-      # slots = []
       forced = true
     },
     {
@@ -62,12 +54,6 @@ gaston {
       max = 6
       min = 5
       name = "Bluebeard’s Bride"
-    },
-    {
-      max = 5
-      min = 4
-      name = Brinkwood
-      slots = []
     },
     {
       max = 5
@@ -109,12 +95,6 @@ gaston {
       min = 5
       name = "Génèse"
       duration = 2
-    },
-    {
-      max = 4
-      min = 2
-      name = InflorItras
-      slots = []
     },
     {
       max = 5
@@ -186,12 +166,6 @@ gaston {
     {
       max = 4
       min = 4
-      name = "Ultraconfins V2"
-      slots = []
-    },
-    {
-      max = 4
-      min = 4
       name = Weird
     }
   ]
@@ -207,7 +181,6 @@ gaston {
         "Serpent de Cendre"
       ]
       mandatory = [
-        "Ultraconfins V2",
         "Minuit pour toujours",
         "Bliss Stage"
       ]
@@ -216,19 +189,16 @@ gaston {
       base-score = -50
       wishes {
         "Bliss Stage" = 2.0 # Forcing a bit
-        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "Avatar Legends" = 0.5
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 4.0
         "Bluebeard’s Bride" = 2.0
-        Brinkwood = 3.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 1.0
         "Dune : Aventure dans l'imperium" = 3.0
         "Exploirateurs de bruines" = 2.0
         "Fate of Cthulhu" = 4.0
-        InflorItras = 1.0
         "London Girls" = 3.0
         Microscope = 1.0
         "Onirico Sov" = 1.0
@@ -246,7 +216,6 @@ gaston {
         "Libreté : Au lycée des corps brisés",
         "Donjons et Chatons",
         "Exploirateurs de bruines",
-        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         Soth,
         "Avatar Legends",
@@ -260,16 +229,13 @@ gaston {
       name = BPM
       weight = 1.0
       wishes {
-        Brinkwood = 1.0
         "Cyberpunk red" = 4.0
         "Dune : Aventure dans l'imperium" = 1.0
         "Fate of Cthulhu" = 1.0
-        InflorItras = 3.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 5.0
         "Serpent de Cendre" = 5.0
         Shades = 4.0
         "Synthétiques : Les Voix" = 1.0
-        "Ultraconfins V2" = 4.0
         Weird = 5.0
       }
     },
@@ -281,14 +247,12 @@ gaston {
         "Dune : Aventure dans l'imperium",
         "Loin du Feu − \"Le Ventre de Lyon\"",
         "Minuit pour toujours",
-        Brinkwood,
         Soth,
         "Fate of Cthulhu",
         "Chasse au vampire",
         Weird,
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2",
         "Serpent de Cendre",
-        InflorItras,
         "Onirico Sov",
         Microscope
       ]
@@ -300,7 +264,6 @@ gaston {
       name = Cactus
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 2.0
         "Avatar Legends" = 1.0
         "Bliss Stage" = 2.0
         "Bluebeard’s Bride" = 1.0
@@ -311,7 +274,6 @@ gaston {
         Shades = 1.0
         "Synthétiques : Les Voix" = 1.0
         "The Wildsea" = 3.0
-        "Ultraconfins V2" = 1.0
       }
     },
     {
@@ -321,9 +283,7 @@ gaston {
         Soth,
         "Avatar Legends",
         "Fate of Cthulhu",
-        "Ultraconfins V2",
         "De bile et d’acier - Souvenance au pic",
-        Brinkwood
       ]
       mandatory = []
       name = Chloé
@@ -363,16 +323,13 @@ gaston {
       name = Elmi
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 2.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
-        Brinkwood = 1.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 2.0
         "Dune : Aventure dans l'imperium" = 5.0
         "Exploirateurs de bruines" = 3.0
         "Fate of Cthulhu" = 3.0
-        InflorItras = 1.0
         "La couvée - le trésor maudit" = 1.0
         "Libreté : Au lycée des corps brisés" = 2.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 3.0
@@ -382,7 +339,6 @@ gaston {
         "Onirico Sov" = 3.0
         "Synthétiques : Les Voix" = 3.0
         "The Wildsea" = 4.0
-        "Ultraconfins V2" = 2.0
       }
     },
     {
@@ -390,7 +346,6 @@ gaston {
         "Pasion de las Pasiones",
         "Génèse",
         "London Girls",
-        Brinkwood,
         "Cyberpunk red",
         "Avatar Legends",
         "Fate of Cthulhu",
@@ -400,7 +355,6 @@ gaston {
         "La couvée - le trésor maudit",
         "Exploirateurs de bruines",
         "Chasse au vampire",
-        "Ultraconfins V2",
         "The Wildsea"
       ]
       mandatory = []
@@ -411,7 +365,6 @@ gaston {
         "Bluebeard’s Bride" = 4.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 1.0
-        InflorItras = 2.0
         "Libreté : Au lycée des corps brisés" = 3.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 3.0
         "Onirico Sov" = 1.0
@@ -446,7 +399,6 @@ gaston {
         "Loin du Feu − \"Le Ventre de Lyon\"" = 1.0
         "Synthétiques : Les Voix" = 5.0
         "The Wildsea" = 1.0
-        "Ultraconfins V2" = 1.0
       }
     },
     {
@@ -455,8 +407,6 @@ gaston {
         "Génèse",
         "London Girls",
         "La couvée - le trésor maudit",
-        "Anime was a Mistake : No more isekai",
-        Brinkwood,
         Soth,
         Weird,
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2",
@@ -480,14 +430,12 @@ gaston {
         "Dune : Aventure dans l'imperium" = 3.0
         "Exploirateurs de bruines" = 3.0
         "Fate of Cthulhu" = 3.0
-        InflorItras = 1.0
         "Libreté : Au lycée des corps brisés" = 5.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 1.0
         "Minuit pour toujours" = 5.0
         "Pasion de las Pasiones" = 1.0
         Shades = 1.0
         "Synthétiques : Les Voix" = 1.0
-        "Ultraconfins V2" = 1.0
       }
     },
     {
@@ -496,19 +444,15 @@ gaston {
         "Génèse",
         "Synthétiques : Les Voix",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai",
         "Loin du Feu − \"Le Ventre de Lyon\"",
         Soth,
         "Fate of Cthulhu",
         Weird,
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2",
-        InflorItras,
         "Dune : Aventure dans l'imperium",
         "La couvée - le trésor maudit",
         "Bliss Stage",
-        Brinkwood,
         "Chasse au vampire",
-        "Ultraconfins V2",
         "The Wildsea"
       ]
       mandatory = []
@@ -543,7 +487,6 @@ gaston {
         "The Wildsea",
         Weird,
         "Bliss Stage",
-        Brinkwood
       ]
       mandatory = [
         "Serpent de Cendre"
@@ -551,7 +494,6 @@ gaston {
       name = Maxime
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 1.0
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 3.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
@@ -559,14 +501,12 @@ gaston {
         "Dune : Aventure dans l'imperium" = 3.0
         "Exploirateurs de bruines" = 1.0
         "Fate of Cthulhu" = 3.0
-        InflorItras = 1.0
         "La couvée - le trésor maudit" = 1.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 3.0
         "Minuit pour toujours" = 3.0
         "Onirico Sov" = 1.0
         "Pasion de las Pasiones" = 5.0
         "Synthétiques : Les Voix" = 1.0
-        "Ultraconfins V2" = 2.0
       }
     },
     {
@@ -574,7 +514,6 @@ gaston {
         "Génèse",
         "La couvée - le trésor maudit",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         "Chasse au vampire",
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2"
@@ -593,7 +532,6 @@ gaston {
         "Donjons et Chatons" = 2.0
         "Dune : Aventure dans l'imperium" = 4.0
         "Fate of Cthulhu" = 5.0
-        InflorItras = 1.0
         "Libreté : Au lycée des corps brisés" = 4.0
         "Synthétiques : Les Voix" = 3.0
         "The Wildsea" = 1.0
@@ -608,7 +546,6 @@ gaston {
         "Bliss Stage",
         Soth,
         "Fate of Cthulhu",
-        "Ultraconfins V2",
         Weird,
         "London Girls",
         "Synthétiques : Les Voix"
@@ -617,17 +554,14 @@ gaston {
       name = Noémie
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 3.0
         "Avatar Legends" = 3.0
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 2.0
         "Bluebeard’s Bride" = 3.0
-        Brinkwood = 2.0
         "Chasse au vampire" = 2.0
         "Cyberpunk red" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 4.0
         "Exploirateurs de bruines" = 3.0
-        InflorItras = 3.0
         "La couvée - le trésor maudit" = 2.0
         "Libreté : Au lycée des corps brisés" = 2.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 1.0
@@ -643,9 +577,7 @@ gaston {
       forbidden = [
         "Génèse",
         Microscope,
-        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
-        Brinkwood,
         "Cyberpunk red",
         Soth,
         "Fate of Cthulhu",
@@ -664,7 +596,6 @@ gaston {
         "Onirico Sov",
         Weird,
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2",
-        InflorItras
       ]
       name = Olivier
       weight = 1.0
@@ -674,7 +605,6 @@ gaston {
         "Onirico Sov" = -2
         Weird = -2
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = -2
-        InflorItras = -2
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "Avatar Legends" = 1.0
         "Bliss Stage" = 5.0
@@ -683,7 +613,6 @@ gaston {
         "Libreté : Au lycée des corps brisés" = 5.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 5.0
         "Pasion de las Pasiones" = 1.0
-        "Ultraconfins V2" = 1.0
       }
     },
     {
@@ -708,7 +637,6 @@ gaston {
         "Loin du Feu − \"Le Ventre de Lyon\"" = 3.0
         "Onirico Sov" = 3.0
         "The Wildsea" = 1.0
-        "Ultraconfins V2" = 3.0
       }
     },
     {
@@ -718,18 +646,17 @@ gaston {
         "Dune : Aventure dans l'imperium",
         "Cyberpunk red",
         "Avatar Legends",
-        "Big Gay Orcs + Stag Party + Rapid and Righteous 2"
+        "Big Gay Orcs + Stag Party + Rapid and Righteous 2",
+        "Soth"
       ]
       mandatory = []
       name = Rafik
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Fate of Cthulhu" = 3.0
         "Génèse" = 1.0
-        InflorItras = 1.0
         "Libreté : Au lycée des corps brisés" = 1.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 1.0
         "Serpent de Cendre" = 1.0
@@ -744,7 +671,6 @@ gaston {
         "Pasion de las Pasiones",
         "London Girls",
         "Onirico Sov",
-        "Anime was a Mistake : No more isekai",
         "Bliss Stage",
         "Bluebeard’s Bride",
         "Avatar Legends",
@@ -762,7 +688,6 @@ gaston {
         "Dune : Aventure dans l'imperium" = 4.0
         "Exploirateurs de bruines" = 4.0
         "Fate of Cthulhu" = 3.0
-        InflorItras = 3.0
         "La couvée - le trésor maudit" = 4.0
         "Libreté : Au lycée des corps brisés" = 1.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 4.0
@@ -771,7 +696,6 @@ gaston {
         Soth = 4.0
         "Synthétiques : Les Voix" = 4.0
         "The Wildsea" = 2.0
-        "Ultraconfins V2" = 2.0
         Weird = 2.0
       }
     },
@@ -795,12 +719,9 @@ gaston {
         "De bile et d’acier - Souvenance au pic",
         "Bliss Stage",
         "Chasse au vampire",
-        "Ultraconfins V2"
       ]
       mandatory = [
         "Donjons et Chatons",
-        "Anime was a Mistake : No more isekai",
-        Brinkwood,
         "Bluebeard’s Bride",
         "The Wildsea"
       ]
@@ -809,7 +730,6 @@ gaston {
       wishes {
         "Big Gay Orcs + Stag Party + Rapid and Righteous 2" = 1.0
         "Cyberpunk red" = 3.0
-        InflorItras = 3.0
         "Loin du Feu − \"Le Ventre de Lyon\"" = 3.0
         Microscope = 1.0
         Shades = 1.0
@@ -857,7 +777,6 @@ gaston {
         "Donjons et Chatons" = 2.0
         "Exploirateurs de bruines" = 2.0
         "Fate of Cthulhu" = 3.0
-        InflorItras = 1.0
         "Synthétiques : Les Voix" = 3.0
         "The Wildsea" = 3.0
       }
@@ -872,15 +791,12 @@ gaston {
         "Minuit pour toujours",
         "Bliss Stage",
         "Avatar Legends",
-        "Ultraconfins V2",
         "Serpent de Cendre",
-        InflorItras
       ]
       mandatory = []
       name = Vincent
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 1.0
         "Chasse au vampire" = 1.0
         "De bile et d’acier - Souvenance au pic" = 1.0
         "Donjons et Chatons" = 1.0
@@ -898,7 +814,6 @@ gaston {
       forbidden = [
         "Génèse",
         "Synthétiques : Les Voix",
-        "Anime was a Mistake : No more isekai",
         "Minuit pour toujours",
         "Bliss Stage",
         "Cyberpunk red",
@@ -910,7 +825,6 @@ gaston {
         "Serpent de Cendre",
         "Dune : Aventure dans l'imperium",
         "La couvée - le trésor maudit",
-        "Ultraconfins V2",
         "The Wildsea"
       ]
       mandatory = []
@@ -918,9 +832,7 @@ gaston {
       weight = 1.0
       wishes {
         "Bluebeard’s Bride" = 5.0
-        Brinkwood = 1.0
         "Donjons et Chatons" = 3.0
-        InflorItras = 3.0
         "Libreté : Au lycée des corps brisés" = 5.0
         "London Girls" = 3.0
         "Pasion de las Pasiones" = 5.0
@@ -944,11 +856,9 @@ gaston {
       name = Vivien
       weight = 1.0
       wishes {
-        "Anime was a Mistake : No more isekai" = 1.0
         "Apocalypse world - Le village aux corbeaux" = 4.0
         "Avatar Legends" = 4.0
         "Bluebeard’s Bride" = 4.0
-        Brinkwood = 1.0
         "Cyberpunk red" = 1.0
         "De bile et d’acier - Souvenance au pic" = 3.0
         "Donjons et Chatons" = 4.0
@@ -957,7 +867,6 @@ gaston {
         "London Girls" = 5.0
         Microscope = 1.0
         "The Wildsea" = 1.0
-        "Ultraconfins V2" = 1.0
         Weird = 1.0
       }
     }
