Avoid persons having multiple unassigned topics

--- a/src/test-perf/resources/r32024/full.conf
+++ b/src/test-perf/resources/r32024/full.conf
@@ -11,6 +11,7 @@ gaston {
       forbidden-ratio-for-maximum = 0.75
       maximum-anti-preference = -50.0
     }
+    person-unassigned-multiple-anti-preference = -200.0
     backtrack-initial-schedule = false
   }
 
@@ -18,10 +19,10 @@ gaston {
     [
       {name = "1 - jeudi aprèm"}
       {name = "2 - jeudi soir"}
-    ],[
+    ], [
       {name = "3 - vendredi aprèm"}
       {name = "4 - vendredi soir"}
-    ],[
+    ], [
       {name = "5 - samedi aprèm"}
       {name = "6 - samedi soir"}
     ]
