--- a/src/test-perf/resources/r32024/full.conf
+++ b/src/test-perf/resources/r32024/full.conf
@@ -621,7 +621,8 @@ gaston {
         "Génèse",
         "Minuit pour toujours",
         "Pasion de las Pasiones",
-        "La couvée - le trésor maudit"
+        "La couvée - le trésor maudit",
+        "Soth"
       ]
       mandatory = [
         "Dune : Aventure dans l'imperium",
