Big cleanup of unassigned/nothing mechanism

--- a/src/test-int/resources/r32019/r32019.conf
+++ b/src/test-int/resources/r32019/r32019.conf
@@ -5,9 +5,11 @@
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    min-persons-on-nothing = 4
-    max-persons-on-nothing = 400
-    person-on-nothing-anti-preference = -100.0
+    unassigned = {
+      allowed = true
+      person-anti-preference = -100.0
+      min = 4
+    }
     backtrack-initial-schedule = false
   }
 
