--- a/src/test-perf/resources/r32024/full.conf
+++ b/src/test-perf/resources/r32024/full.conf
@@ -5,13 +5,15 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    person-unassigned-anti-preference = -200.0
-    person-unassigned-anti-preference-scaling {
-      enabled = true
-      forbidden-ratio-for-maximum = 0.75
-      maximum-anti-preference = -50.0
+    unassigned {
+      allowed = true
+      person-anti-preference = -200.0
+      person-anti-preference-scaling {
+        maximum-anti-preference = -50.0
+        forbidden-ratio-for-maximum = 0.75
+      }
+      person-multiple-anti-preference = -200
     }
-    person-unassigned-multiple-anti-preference = -200.0
     backtrack-initial-schedule = false
   }
 
