--- a/src/test/resources/test-application.conf
+++ b/src/test/resources/test-application.conf
@@ -6,6 +6,9 @@ gaston: {
     default-max-topics-per-slot: 5
     default-min-persons-per-topic: 4
     default-max-persons-per-topic: 6
+    unassigned: {
+      allowed: true
+    }
   }
 
   table-settings: {
