--- a/src/test-perf/resources/r32023/r32023-from-table.conf
+++ b/src/test-perf/resources/r32023/r32023-from-table.conf
@@ -5,13 +5,14 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     incompatibility-anti-preference = -1000.0
-    max-persons-on-nothing = 10
-    min-persons-on-nothing = 1
-    person-on-nothing-anti-preference = -100.0
-    person-on-nothing-anti-preference-scaling {
-      enabled = true
-      forbidden-ratio-for-maximum = 0.75
-      maximum-anti-preference = -1.0
+
+    unassigned {
+      allowed = true
+      person-anti-preference = -100.0
+      person-anti-preference-scaling {
+        maximum-anti-preference = -1.0
+        forbidden-ratio-for-maximum = 0.75
+      }
     }
   }
 
