--- a/src/test-perf/resources/r32023/r32023-tts-revised.conf
+++ b/src/test-perf/resources/r32023/r32023-tts-revised.conf
@@ -4,13 +4,15 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    min-persons-on-nothing = 3
-    max-persons-on-nothing = 100
-    person-on-nothing-anti-preference = -100.0
-    person-on-nothing-anti-preference-scaling {
-      enabled = true
-      forbidden-ratio-for-maximum = 0.75
-      maximum-anti-preference = -1.0
+
+    unassigned {
+      allowed = true
+      min-persons = 3
+      person-anti-preference = -100.0
+      person-anti-preference-scaling {
+        maximum-anti-preference = -1.0
+        forbidden-ratio-for-maximum = 0.75
+      }
     }
     backtrack-initial-schedule = false
   }
