--- a/src/test-perf/resources/r32024/base.conf
+++ b/src/test-perf/resources/r32024/base.conf
@@ -5,15 +5,15 @@ gaston {
     default-max-topics-per-slot = 10
     default-min-persons-per-topic = 1
     default-max-persons-per-topic = 10
-    min-persons-on-nothing = 1
-    max-persons-on-nothing = 100
-    person-on-nothing-anti-preference = -100.0
-    person-on-nothing-anti-preference-scaling {
-      enabled = true
-      forbidden-ratio-for-maximum = 0.75,
-      maximum-anti-preference = -1,
+
+    unassigned {
+      allowed = true
+      person-anti-preference = -100.0
+      person-anti-preference-scaling {
+        maximum-anti-preference = -1.0
+        forbidden-ratio-for-maximum = 0.75
+      }
     }
-    person-unassigned-anti-preference = -100.0
     backtrack-initial-schedule = false
   }
 
