--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,8 @@
-version = "3.7.15"
+version = "3.8.3"
 runner.dialect = scala3
 
 maxColumn = 120
+assumeStandardLibraryStripMargin = true
+newlines.topLevelStatementBlankLines = [
+    { regex = "^Import", blanks { before = 1, after = 2 } }
+]
