Better test for InputTranscription2 (and fixes a few things)

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -2,6 +2,7 @@
 
   "settings": {
     "incompatibility-anti-preference": -1000.0
+    "default-max-topics-per-slot": 50
     "default-min-persons-per-topic": 4
     "default-max-persons-per-topic": 6
   }
@@ -19,11 +20,11 @@
     },
     {
       "name": "Beta"
-      "min": 2
       "max": 5
     },
     {
       "name": "Gamma"
+      "min": 2
       "forced": true
     },
     {
@@ -42,6 +43,9 @@
       "name": "Theta"
       "occurrences": 3
       "duration": 2
+      "forced": true
+      "min": 5
+      "max": 7
     }
   ]
 
@@ -50,9 +54,8 @@
       "absences": [],
       "forbidden": [],
       "incompatible": [],
-      "mandatory": ["Beta"],
+      "mandatory": ["Alpha", "Delta"],
       "name": "Albert",
-      "weight": 1.0,
       "wishes": {
       }
     },
@@ -63,6 +66,7 @@
       "mandatory": ["Alpha"],
       "name": "Bianca",
       "weight": 1.0,
+      "base-score": 20,
       "wishes": {
       }
     },
@@ -70,9 +74,9 @@
       "absences": [],
       "forbidden": [],
       "incompatible": [],
-      "mandatory": ["Delta"],
+      "mandatory": ["Theta"],
       "name": "Charly",
-      "weight": 1.0,
+      "weight": 2.0,
       "wishes": {}
     }
   ]
