Adds more stuff in InputTranscription2

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -8,9 +8,9 @@
   }
 
   "slots": [
-    [ { "name": "D1-afternoon" }, { "name": "D1-evening", "max-topics": 5 } ]
-    [ { "name": "D2-afternoon" } ]
-    [ { "name": "D3-afternoon" }, { "name": "D3-evening" }, { "name": "D3-night" } ]
+    [{"name": "D1-afternoon"}, {"name": "D1-evening", "max-topics": 5}]
+    [{"name": "D2-afternoon"}]
+    [{"name": "D3-afternoon"}, {"name": "D3-evening"}, {"name": "D3-night"}]
   ]
 
   "topics": [
@@ -80,4 +80,9 @@
       "wishes": {}
     }
   ]
+
+  constraints {
+    simultaneous: [ { topics: ["Alpha", "Beta"] } ]
+    not-simultaneous: [ { topics: ["Epsilon", "Eta"] } ]
+  }
 }
