Adds anti-preference for unassigned topics

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -5,6 +5,14 @@
     "default-max-topics-per-slot": 50
     "default-min-persons-per-topic": 4
     "default-max-persons-per-topic": 6
+    unassigned {
+      allowed = true
+      person-anti-preference = -100.0
+      person-anti-preference-scaling {
+        maximum-anti-preference = -1.0
+        forbidden-ratio-for-maximum = 0.5
+      }
+    }
   }
 
   "slots": [
@@ -61,7 +69,7 @@
     },
     {
       "absences": [],
-      "forbidden": [],
+      "forbidden": [Beta, Gamma, Delta, Epsilon],
       "incompatible": [],
       "mandatory": ["Alpha"],
       "name": "Bianca",
@@ -72,7 +80,7 @@
     },
     {
       "absences": [],
-      "forbidden": [],
+      "forbidden": [Eta],
       "incompatible": [],
       "mandatory": ["Theta"],
       "name": "Charly",
