Handle exclusive topics, and fix bugs

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -8,6 +8,7 @@
     unassigned {
       allowed = true
       person-anti-preference = -100.0
+      person-multiple-anti-preference = -50
       person-anti-preference-scaling {
         maximum-anti-preference = -1.0
         forbidden-ratio-for-maximum = 0.5
@@ -92,5 +93,9 @@
   constraints {
     simultaneous: [ { topics: ["Alpha", "Beta"] } ]
     not-simultaneous: [ { topics: ["Epsilon", "Eta"] } ]
+    exclusive: [ 
+      { topics: ["Alpha", "Beta", "Gamma"], exemptions: ["Albert", "Bianca"] },
+      { topics: ["Epsilon", "Eta"], exemptions: ["Albert", "Charly"] }
+    ]
   }
 }
