Adds linked topics

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -97,5 +97,6 @@
       { topics: ["Alpha", "Beta", "Gamma"], exemptions: ["Albert", "Bianca"] },
       { topics: ["Epsilon", "Eta"], exemptions: ["Albert", "Charly"] }
     ]
+    linked: [ { topics: ["Alpha", "Eta"] } ]
   }
 }
