Adds tests on wishes

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -66,6 +66,8 @@
       "mandatory": ["Alpha", "Delta"],
       "name": "Albert",
       "wishes": {
+        "Epsilon": 4
+        "Beta": 1
       }
     },
     {
@@ -77,6 +79,8 @@
       "weight": 1.0,
       "base-score": 20,
       "wishes": {
+        "Alpha": 1500000
+        "Eta": 500000
       }
     },
     {
@@ -86,7 +90,12 @@
       "mandatory": ["Theta"],
       "name": "Charly",
       "weight": 2.0,
-      "wishes": {}
+      "wishes": {
+        "Alpha": 4
+      }
+      "person-wishes": {
+        "Albert": 1
+      }
     }
   ]
 
