Adds missing transcription tests and fix code

--- a/src/test/resources/transcription-test.conf
+++ b/src/test/resources/transcription-test.conf
@@ -60,9 +60,9 @@
 
   "persons": [
     {
-      "absences": [],
+      "absences": ["D2-afternoon", "D3-night"],
       "forbidden": [],
-      "incompatible": [],
+      "incompatible": ["Bianca"],
       "mandatory": ["Alpha", "Delta"],
       "name": "Albert",
       "wishes": {
